--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>teams</title>
+    <title>Teams Networking</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Teams Networking</h1>
-    <h2>CRUD Operations</h2>
+    <h2>CRUD operations example (Create, Read, Update, Delete)</h2>
     <script src="index.js"></script>
   </body>
 </html>
