--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Teams Networking</h1>
-    <h2>CRUD operations example (Create, Read, Update, Delete)</h2>
+    <header>
+      <img src="network-team-icon.png" width="100" alt="" />
+      <h1>Teams Networking</h1>
+      <h2>CRUD operations example (Create, Read, Update, Delete)</h2>
+    </header>
+
     <script src="index.js"></script>
   </body>
 </html>
