--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,20 @@
   </head>
   <body>
     <header>
-      <img src="network-team-icon.png" width="100" alt="" />
+      <div id="header-wraper">
+        <div id="my-picture">
+          <img src="network-team-icon.png" width="100" alt="" />
+        </div>
 
-      <h1>Teams Networking</h1>
-      <h2>CRUD operations example (Create, Read, Update, Delete)</h2>
+        <div id="header-info">
+          <h1>Teams Networking</h1>
+          <h2 id="job-title">CRUD operations example (Create, Read, Update, Delete)</h2>
+        </div>
+      </div>
     </header>
+
+    <section>Table</section>
+
+    <footer>💡 API Docs | 👨‍💻 Source Code></footer>
   </body>
 </html>
