static html table

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,50 @@
       </div>
     </header>
 
-    <section>Table</section>
+    <section>
+      <table id="teamsTable">
+        <thead>
+          <tr>
+            <th>Promotion</th>
+            <th>Members</th>
+            <th>Project Name</th>
+            <th>Project URL</th>
+            <th>x</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Fast Truck IT</td>
+            <td>Radu Gaciu</td>
+            <td>Teams Network</td>
+            <td>gaciurad/teams</td>
+            <td>x</td>
+          </tr>
+          <tr>
+            <td>Fast Truck IT</td>
+            <td>Radu Gaciu</td>
+            <td>Teams Network</td>
+            <td>gaciurad/teams</td>
+            <td>x</td>
+          </tr>
+          <tr>
+            <td>Fast Truck IT</td>
+            <td>Radu Gaciu</td>
+            <td>Teams Network</td>
+            <td>gaciurad/teams</td>
+            <td>x</td>
+          </tr>
+          <tr>
+            <td>Fast Truck IT</td>
+            <td>Radu Gaciu</td>
+            <td>Teams Network</td>
+            <td>gaciurad/teams</td>
+            <td>x</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
 
-    <footer>💡 API Docs | 👨‍💻 Source Code></footer>
+    <footer>🗒️ API Docs | 👨‍💻 Source Code></footer>
   </body>
 </html>
