--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,10 @@
       </table>
     </section>
 
-    <footer>🗒️ API Docs | 👨‍💻 Source Code></footer>
+    <footer>
+      <a href="https://github.com/GaciuRadu/teams-networking" target="_blank">🗒️ API Docs </a>
+      " | "
+      <a href="">👨‍💻 Source Code></a>
+    </footer>
   </body>
 </html>
