updt readme and css in footer

--- a/src/index.html
+++ b/src/index.html
@@ -76,8 +76,8 @@
 
     <footer>
       <a href="https://github.com/GaciuRadu/teams-networking" target="_blank">🗒️ API Docs </a>
-      " | "
-      <a href="">👨‍💻 Source Code></a>
+      |
+      <a href="">👨‍💻 Source Code</a>
     </footer>
   </body>
 </html>
