footer table menu correction

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,7 @@
             <td>x</td>
           </tr>
           <tr>
+            <td></td>
             <td>Fast Truck IT</td>
             <td>Radu Gaciu</td>
             <td>Teams Network</td>
@@ -63,6 +64,7 @@
             <td>x</td>
           </tr>
           <tr>
+            <td></td>
             <td>Fast Truck IT</td>
             <td>Radu Gaciu</td>
             <td>Teams Network</td>
@@ -70,6 +72,7 @@
             <td>x</td>
           </tr>
           <tr>
+            <td></td>
             <td>Fast Truck IT</td>
             <td>Radu Gaciu</td>
             <td>Teams Network</td>
@@ -81,6 +84,9 @@
           <td></td>
           <td>
             <input type="text" required name="promotion" placeholder="Enter promotion" />
+          </td>
+          <td>
+            <input type="text" required name="members" placeholder="Enter members" />
           </td>
 
           <td>
