udpt Project URL info

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
             <td>Fast Truck IT</td>
             <td>Radu Gaciu</td>
             <td>Teams Network</td>
-            <td>gaciurad/teams</td>
+            <td>gaciuradu/teams</td>
             <td>x</td>
           </tr>
           <tr>
@@ -60,7 +60,7 @@
             <td>Fast Truck IT</td>
             <td>Radu Gaciu</td>
             <td>Teams Network</td>
-            <td>gaciurad/teams</td>
+            <td>gaciuradu/teams</td>
             <td>x</td>
           </tr>
           <tr>
@@ -68,7 +68,7 @@
             <td>Fast Truck IT</td>
             <td>Radu Gaciu</td>
             <td>Teams Network</td>
-            <td>gaciurad/teams</td>
+            <td>gaciuradu/teams</td>
             <td>x</td>
           </tr>
           <tr>
@@ -76,7 +76,7 @@
             <td>Fast Truck IT</td>
             <td>Radu Gaciu</td>
             <td>Teams Network</td>
-            <td>gaciurad/teams</td>
+            <td>gaciuradu/teams</td>
             <td>x</td>
           </tr>
         </tbody>
