small arrange in tbar

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         <div class="tfill"></div>
         <div>
           <input placeholder="Search" type="search" name="search" id="search" />
-          🔎
+          <label for="search"> 🔎 </label>
         </div>
       </div>
 
