updt start scripts

--- a/src/index.html
+++ b/src/index.html
@@ -44,35 +44,7 @@
             <th></th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td style="text-align: center">
-              <input type="checkbox" />
-            </td>
-            <td>Fast Truck IT</td>
-            <td>Radu Gaciu</td>
-            <td>Teams Network</td>
-            <td>gaciuradu/teams</td>
-            <td>x</td>
-          </tr>
-
-          <tr>
-            <td></td>
-            <td>Fast Truck IT</td>
-            <td>Radu Gaciu</td>
-            <td>Teams Network</td>
-            <td>gaciuradu/teams</td>
-            <td>x</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>Fast Truck IT</td>
-            <td>Radu Gaciu</td>
-            <td>Teams Network</td>
-            <td>gaciuradu/teams</td>
-            <td>x</td>
-          </tr>
-        </tbody>
+        <tbody></tbody>
         <tfoot>
           <td></td>
           <td>
