--- a/src/index.html
+++ b/src/index.html
@@ -46,24 +46,26 @@
         </thead>
         <tbody></tbody>
         <tfoot>
-          <td></td>
-          <td>
-            <input type="text" required name="promotion" placeholder="Enter promotion" />
-          </td>
-          <td>
-            <input type="text" required name="members" placeholder="Enter members" />
-          </td>
+          <tr>
+            <td></td>
+            <td>
+              <input type="text" required name="Enter Promotion" placeholder="Enter promotion" />
+            </td>
+            <td>
+              <input type="text" required name="Enter Members" placeholder="Enter members" />
+            </td>
 
-          <td>
-            <input type="text" required name="name" placeholder="Enter project name" />
-          </td>
-          <td>
-            <input type="text" required name="url" placeholder="Project URL" />
-          </td>
-          <td>
-            <button>💾</button>
-            <button>x</button>
-          </td>
+            <td>
+              <input type="text" required name="Enter Name" placeholder="Enter project name" />
+            </td>
+            <td>
+              <input type="text" required name="Enter URL" placeholder="Project URL" />
+            </td>
+            <td>
+              <button>💾</button>
+              <button>x</button>
+            </td>
+          </tr>
         </tfoot>
       </table>
     </section>
