create function createTeamRequest/function onSubmit

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         </div>
       </div>
 
-      <form action="secretara" method="get">
+      <form id="teamsForm" action="" method="get">
         <table id="teamsTable">
           <thead>
             <tr>
@@ -50,17 +50,17 @@
             <tr>
               <td></td>
               <td>
-                <input type="text" required name="Enter Promotion" placeholder="Enter promotion" />
+                <input type="text" required name="promotion" id="promotion" placeholder="Enter promotion" />
               </td>
               <td>
-                <input type="text" required name="Enter Members" placeholder="Enter members" />
+                <input type="text" required name="members" id="members" placeholder="Enter members" />
               </td>
 
               <td>
-                <input type="text" required name="Enter Name" placeholder="Enter project name" />
+                <input type="text" required name="name" id="name" placeholder="Enter project name" />
               </td>
               <td>
-                <input type="text" required name="Enter URL" placeholder="Project URL" />
+                <input type="text" required name="url" id="url" placeholder="Project URL" />
               </td>
               <td>
                 <button type="submit">💾</button>
