--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
             <col span="1" style="width: 20%" />
             <col span="1" />
             <col span="1" />
-            <col span="1" style="width: 80px" />
+            <col span="1" style="width: 70px" />
           </colgroup>
           <thead>
             <tr>
@@ -57,21 +57,21 @@
             <tr>
               <td></td>
               <td>
-                <input type="text" required name="promotion" placeholder="Enter promotion" />
+                <input type="text" name="promotion" placeholder="Enter promotion" required />
               </td>
               <td>
-                <input type="text" required name="members" placeholder="Enter members" />
+                <input type="text" name="members" placeholder="Enter members" required />
               </td>
 
               <td>
-                <input type="text" required name="name" placeholder="Enter project name" />
+                <input type="text" name="name" placeholder="Enter project name" required />
               </td>
               <td>
-                <input type="text" required name="url" placeholder="Project URL" />
+                <input type="text" name="url" placeholder="Project URL" required />
               </td>
               <td>
-                <button title="add" type="submit">+</button>
-                <button type="reset">❌</button>
+                <button title="add" type="submit">➕</button>
+                <button title="reset" type="reset">❌</button>
               </td>
             </tr>
           </tfoot>
