--- a/src/index.html
+++ b/src/index.html
@@ -34,11 +34,12 @@
       <form id="teamsForm" action="" method="get">
         <table id="teamsTable">
           <colgroup>
-            <col span="1" style="width: 2%" />
-            <col span="1" style="width: 20%" />
-            <col span="1" />
-            <col span="1" />
-            <col span="1" style="width: 70px" />
+            <col />
+            <col style="width: 20%" />
+            <col style="width: 40%" />
+            <col style="width: 25%" />
+            <col style="width: 15%" />
+            <col class="table-actions" />
           </colgroup>
           <thead>
             <tr>
