simplify display url

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
               </td>
               <td>
                 <button title="add" type="submit">➕</button>
-                <button title="reset" type="reset">🗑️</button>
+                <button title="reset" type="reset">✖</button>
               </td>
             </tr>
           </tfoot>
