chng save button in tfoot

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
           <tbody></tbody>
           <tfoot>
             <tr>
-              <!-- <td></td> -->
+              <td></td>
               <td>
                 <input type="text" name="promotion" placeholder="Enter promotion" required />
               </td>
@@ -71,7 +71,7 @@
                 <input type="text" name="url" placeholder="Project URL" required />
               </td>
               <td>
-                <button title="add" type="submit">➕</button>
+                <button title="add" type="submit">💾</button>
                 <button title="reset" type="reset">✖</button>
               </td>
             </tr>
