chng icon in footer

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
     </section>
 
     <footer>
-      <a href="https://github.com/GaciuRadu/teams-networking" target="_blank">🗒️ API Docs </a>
+      <a href="https://github.com/GaciuRadu/teams-networking" target="_blank">📃 API Docs </a>
       |
       <a href="">👨‍💻 Source Code</a>
     </footer>
