chng icone button add

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
                 <input type="text" name="url" placeholder="Project URL" required />
               </td>
               <td>
-                <button title="add" type="submit">💾</button>
+                <button title="add" type="submit">➕</button>
                 <button title="reset" type="reset">✖</button>
               </td>
             </tr>
