table layout and button size

--- a/src/index.html
+++ b/src/index.html
@@ -71,8 +71,8 @@
                 <input type="text" name="url" placeholder="Project URL" required />
               </td>
               <td>
-                <button title="add" type="submit">➕</button>
-                <button title="reset" type="reset">✖</button>
+                <button title="add" class="action-btn" type="submit">➕</button>
+                <button title="reset" class="action-btn" type="reset">✖</button>
               </td>
             </tr>
           </tfoot>
