implement custom callback

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <section>
       <div class="tbar">
         <div>
-          <button>❌ Remove selected</button>
+          <button disabled title="TODO pls implement me">❌ Remove selected</button>
         </div>
         <div class="tfill"></div>
         <div>
