new function numberOfTeams

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <section>
       <div class="tbar">
         <div>
-          <!-- <button disabled title="TODO pls implement me">❌ Remove selected</button> -->
+          <button disabled title="TODO pls implement me">❌ Remove selected// numar echipe</button>
         </div>
         <div class="tfill"></div>
         <div>
