delete multiple teams using promise all

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       </div>
     </header>
 
-    <section>
+    <section id="main">
       <div class="tbar">
         <div>
           <button id="removeSelected">❌ Remove selected</button>
